--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ScrapedFood
+server.port=8084
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.database=foodData
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://root:root@fypcluster.zdqrt70.mongodb.net/?retryWrites=true&w=majority&appName=FYPCluster
+spring.data.mongodb.database=ScrapedRecipes
